--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "node-sass": "^4.12.0",
+    "node-sass-chokidar": "^1.3.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
